# lightning_viz

./: Cargo.toml  README.md  lightning_network.dot
config/: default.toml
src/: main.rs
src/bitcoin/: mod.rs  node.rs
src/lightning/: mod.rs  node.rs
src/visualization/: mod.rs
