[package]
name = "lightning_viz"
version = "0.1.0"
edition = "2021"

[dependencies]
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
bitcoincore-rpc = "0.17"
config = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
cln-rpc = "0.1"
chrono = "0.4"
